ajustes no responsivo e tambem e favicon

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="shortcut icon" href="images/favicon.png" type="image/png" />
   </head>
   <body class="bg-page">
     <div id="openModalBase" class="base-modal">
@@ -46,7 +47,8 @@
 
     <main>
       <img src="/images/coracao-eli-bella.png" alt="Eliveuton e Isabella" />
-      <h1>😍 Amo você mais que tudo 😍</h1>
+      <h1>😍 Eli e Bella 😍</h1>
+      <p>Não se preocupa, não vou te hackear😅</p>
 
       <button>🙈 Amor, Clique Aqui 🙈</button>
     </main>
