--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/styles/style.css" />
-    <link rel="shortcut icon" href="images/favicon.png" type="image/png" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/png" />
   </head>
   <body class="bg-page">
     <div id="openModalBase" class="base-modal">
       <div id="openModal" class="modal">
         <div class="exit">
-          <img class="btnCloseModal" src="/images/exit.svg" alt="Fechar" />
+          <img class="btnCloseModal" src="./images/exit.svg" alt="Fechar" />
         </div>
 
         <div class="content">
@@ -46,13 +46,13 @@
     </div>
 
     <main>
-      <img src="/images/coracao-eli-bella.png" alt="Eliveuton e Isabella" />
+      <img src="./images/coracao-eli-bella.png" alt="Eliveuton e Isabella" />
       <h1>😍 Eli e Bella 😍</h1>
       <p>Não se preocupa, não vou te hackear😅</p>
 
       <button>🙈 Amor, Clique Aqui 🙈</button>
     </main>
 
-    <script src="/javascript/modal.js"></script>
+    <script src="./javascript/modal.js"></script>
   </body>
 </html>
