Alteração na copy

--- a/index.html
+++ b/index.html
@@ -22,33 +22,22 @@
         </div>
 
         <div class="content">
-          <h2>💖 Isabella Lades 💖</h2>
+          <h2>💖 Nome do Seu Amor 💖</h2>
 
           <p>
-            Criei esse pequeno projetinho para dizer algumas coisinhas pra
-            você🙈💕... <br /><br />
-            A vida é cheia de surpresa não?🙈💖... De alguma forma, encontrei
-            uma pessoa muito especial da forma que eu menos esperava (você
-            entendeu ksksk😅). Sobre ela? Ela não é deste mundo, talvez também
-            não seja também deste universo, suspeito sobre a dimensão ksks🤔...
-            <br /><br />Mas de uma coisa eu sei, Eu A Amo Muito. Em um mundo
-            onde todos tentam ser iguais, ela é diferente, ousada, persistente,
-            cheia de sonhos e objetivos, isso me encanta, e como encanta 🙈💖...
-            <br /><br />Já fomos sócios, agora namorados, em breve donos da I.A
-            mais sofisticada e poderosa que o mundo já viu... Bella, essa é
-            você! Te Amo em cada detalhe, para mim você é perfeita😍😍... Amo
-            você minha menininha🙈💖...
+Lorem ipsum dolor sit amet, consectetur adipiscing elit🙈💕... <br /><br /> 
+Donec eu massa dignissim, maximus nunc eu, auctor sem?🙈💖... Nullam condimentum nisl vitae lacus posuere, ac maximus leo tincidunt. Nam sed risus nec justo pellentesque fringilla id malesuada quam. Vestibulum quis nunc et enim iaculis sagittis.🙈💖... <br /><br />Curabitur ligula purus, varius vel magna et, sagittis luctus ante. Nam efficitur eleifend efficitur. Nunc a erat lacus. Integer tellus erat, luctus quis lorem in, elementum elementum nisl. 🙈💖...Vestibulum in venenatis magna. Duis eget feugiat felis, vitae ullamcorper sapien. Curabitur sollicitudin egestas massa at imperdiet.<br /><br /> Morbi sollicitudin, neque id ultrices viverra, diam ex facilisis eros, sit amet consectetur leo arcu eu justo. Duis vel leo semper, placerat lectus id, imperdiet sem.🙈💖...
           </p>
 
-          <span>By: Eli🙈 </span>
+          <span>By: Seu amor🙈 </span>
         </div>
       </div>
     </div>
 
     <main>
       <img src="./images/coracao-eli-bella.png" alt="Eliveuton e Isabella" />
-      <h1>😍 Eli e Bella 😍</h1>
-      <p>Não se preocupa, não vou te hackear😅</p>
+      <h1>😍 Seu nome & nome dela 😍</h1>
+      <p>Mensagem engraçadinha😅</p>
 
       <button>🙈 Amor, Clique Aqui 🙈</button>
     </main>
