Correção de bugs na imagem de perfil

--- a/index.html
+++ b/index.html
@@ -25,8 +25,21 @@
           <h2>💖 Nome do Seu Amor 💖</h2>
 
           <p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit🙈💕... <br /><br /> 
-Donec eu massa dignissim, maximus nunc eu, auctor sem?🙈💖... Nullam condimentum nisl vitae lacus posuere, ac maximus leo tincidunt. Nam sed risus nec justo pellentesque fringilla id malesuada quam. Vestibulum quis nunc et enim iaculis sagittis.🙈💖... <br /><br />Curabitur ligula purus, varius vel magna et, sagittis luctus ante. Nam efficitur eleifend efficitur. Nunc a erat lacus. Integer tellus erat, luctus quis lorem in, elementum elementum nisl. 🙈💖...Vestibulum in venenatis magna. Duis eget feugiat felis, vitae ullamcorper sapien. Curabitur sollicitudin egestas massa at imperdiet.<br /><br /> Morbi sollicitudin, neque id ultrices viverra, diam ex facilisis eros, sit amet consectetur leo arcu eu justo. Duis vel leo semper, placerat lectus id, imperdiet sem.🙈💖...
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit🙈💕...
+            <br /><br />
+            Donec eu massa dignissim, maximus nunc eu, auctor sem?🙈💖... Nullam
+            condimentum nisl vitae lacus posuere, ac maximus leo tincidunt. Nam
+            sed risus nec justo pellentesque fringilla id malesuada quam.
+            Vestibulum quis nunc et enim iaculis sagittis.🙈💖...
+            <br /><br />Curabitur ligula purus, varius vel magna et, sagittis
+            luctus ante. Nam efficitur eleifend efficitur. Nunc a erat lacus.
+            Integer tellus erat, luctus quis lorem in, elementum elementum nisl.
+            🙈💖...Vestibulum in venenatis magna. Duis eget feugiat felis, vitae
+            ullamcorper sapien. Curabitur sollicitudin egestas massa at
+            imperdiet.<br /><br />
+            Morbi sollicitudin, neque id ultrices viverra, diam ex facilisis
+            eros, sit amet consectetur leo arcu eu justo. Duis vel leo semper,
+            placerat lectus id, imperdiet sem.🙈💖...
           </p>
 
           <span>By: Seu amor🙈 </span>
@@ -35,7 +48,10 @@ Donec eu massa dignissim, maximus nunc eu, auctor sem?🙈💖... Nullam condime
     </div>
 
     <main>
-      <img src="https://source.unsplash.com/random" alt="Foto do Casal />
+      <img
+        src="https://source.unsplash.com/random/300×300"
+        alt="Foto do Casal"
+      />
       <h1>😍 Seu nome & nome dela 😍</h1>
       <p>Mensagem engraçadinha😅</p>
 
