Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             placerat lectus id, imperdiet sem.🙈💖...
           </p>
 
-          <span>By: Seu amor🙈 </span>
+          <span>By: Seu amor thayna, eu te amo🙈 </span>
         </div>
       </div>
     </div>
