Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="content">
-          <h2>💖 Nome do Seu Amor 💖</h2>
+          <h2>💖 Thayna 💖</h2>
 
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit🙈💕...
